@@ -8,6 +8,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - 'markauto', 'unmarkauto': are now first-class management commands.
       - Action preview prompt: now properly show reinstalled packages as
         reinstalled, not as upgraded.
+      - Action preview prompt: removed the 'one expression per line'
+        limitation while processing 'a' choice.
   * lib:
     - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
     - [API break] '__': now returns 'const char*' instead of 'string'.
